version 1.0.0 -
. [FIX] cocosLive: fixed memory leak in ScoreServerPost
. [FIX] Tests: Fixed memory leak in ParticleTest
. [FIX] Tests: Fixed memory leak in cocosLiveTest
. [FIX] Xcode: cocos2d compiles OK with Xcode 4.2 + llvm 3.0

version 1.0-rc3 - 31-May-2011
. [NEW] Actions: Added SkewTo and SkewBy actions
. [NEW] LabelTTF: Added support for LineBreakMode. Mac only supports Word-Break.
. [NEW] Node / Sprite: Added support for SkewX and SkewY properties
. [NEW] Tests: Added skewX, skewY tests for sprites and actions. Added linebreak tests for LabelTTF.
. [NEW] TextureCache: Added dumpCachedTextureInfo method. Shows the RAM used by the cached textures (issue #1154)
. [FIX] cocosLive: Fixed memory leaks in NSURLConnection
. [FIX] Sprites: DisplayedFrame returns the correct frame (issue #1182)
. [FIX] Templates: Supports spaces in project name (issue #1158)
. [FIX] TextureCache: Textures are autoreleased to prevent a crash in multi-threading environments
. [FIX] TexturePVR: clean glError() before creating textures
. [FIX] TMX Maps: Consume less memory (only what is needed), faster loading times (issue #1175)
. [FIX-MAC] Tests: Added test case for issue #1071
. [FIX-MAC] Director: Doesn't crash when entering fullscreen if window is not Key (issue #1185)

version 1.0-rc2 - 03-May-2011
. [NEW] CCArray: Added reduceMemoryFootprint and reverseObject (issue #1167)
. [NEW] Director: Use small dt when the game is being debugged.
. [NEW] Label: TTF supports new LA88 texture format instead of RGBA8888. A8 is still the default one.
. [NEW] Particles: Added support for ParticleDesigner 1.3.60 (spinning support)
. [NEW] Tests: Added test case for bug 1159
. [FIX] Particles: TTL is always >= 0.
. [FIX] Particles: texture coordinates are being used correctly when texture is NPOT.
. [FIX] Scheduler: Fixed possible crash when unscheduling a sibling (issue #1144)
. [FIX] Templates: Use NS_BLOCK_ASSERTIONS and NDEBUG in Release Mode to remove asserts