@@ -24,7 +24,7 @@ Alexander, Edward
 Alexeev, Andrei
 Amiri, Hesham (http://www.amiri.info/)
 Apple, Jonathan (http://www.jonathanapple.com/)
-Andrle, Tomas
+Andrle, Tomas (http://www.catnapgames.com/)
 Barreto, Leandro (http://www.leandro.co.uk)
 Barta, Markus (http://markus.barta.com)
 Berry, Sean
