@@ -122,54 +122,69 @@ CGPoint ccpRotateByAngle(CGPoint v, CGPoint pivot, float angle)
 	return r;
 }
 
+
+BOOL ccpSegmentIntersect(CGPoint A, CGPoint B, CGPoint C, CGPoint D)
+{
+	float S, T;
+
+	if( ccpLineIntersect(A, B, C, D, &S, &T )
+	   && (S >= 0.0f && S <= 1.0f && T >= 0.0f && T <= 1.0f) )
+		return YES;
+
+	return NO;
+}
+
+CGPoint ccpIntersectPoint(CGPoint A, CGPoint B, CGPoint C, CGPoint D)
+{
+	float S, T;
+
+	if( ccpLineIntersect(A, B, C, D, &S, &T) ) {
+		// Point of intersection
+		CGPoint P;
+		P.x = A.x + S * (B.x - A.x);
+		P.y = A.y + S * (B.y - A.y);
+		return P;
+	}
+
+	return CGPointZero;
+}
+
 BOOL ccpLineIntersect(CGPoint A, CGPoint B,
 					  CGPoint C, CGPoint D,
 					  float *S, float *T)
 {    
 	// FAIL: Line undefined
 	if ( (A.x==B.x && A.y==B.y) || (C.x==D.x && C.y==D.y) ) return NO;
-    
-	//  Translate system to make A the origin
-	B.x-=A.x; B.y-=A.y;
-	C.x-=A.x; C.y-=A.y;
-	D.x-=A.x; D.y-=A.y;
 
-	// Cache
-	CGPoint C2 = C, D2 = D;
+	const float BAx = B.x - A.x;
+	const float BAy = B.y - A.y;
+	const float DCx = D.x - C.x;
+	const float DCy = D.y - C.y;
+	const float ACx = A.x - C.x;
+	const float ACy = A.y - C.y;
 
-	// Length of segment AB
-	float distAB = sqrtf(B.x*B.x+B.y*B.y);
+	const float denom = DCy*BAx - DCx*BAy;
 
-	// Rotate the system so that point B is on the positive X axis.
-	float theCos = B.x/distAB;
-	float theSin = B.y/distAB;
-	float newX = C.x*theCos+C.y*theSin;
-	C.y  = C.y*theCos-C.x*theSin; C.x = newX;
-	newX = D.x*theCos+D.y*theSin;
-	D.y  = D.y*theCos-D.x*theSin; D.x = newX;
+	*S = DCx*ACy - DCy*ACx;
+	*T = BAx*ACy - BAy*ACx;
 
-	// FAIL: Lines are parallel.
-	if (C.y == D.y) return NO;
+	if (denom == 0) {
+		if (*S == 0 || *T == 0) { 
+			// Lines incident
+			return YES;   
+		}
+		// Lines parallel and not incident
+		return NO;
+	}
 
-	// Discover position of the intersection in the line AB
-	float ABpos = D.x+(C.x-D.x)*D.y/(D.y-C.y);
+	*S = *S / denom;
+	*T = *T / denom;
 
-	// Vector CD
-	C.x = D2.x-C2.x;
-	C.y = D2.y-C2.y;
+	// Point of intersection
+	// CGPoint P;
+	// P.x = A.x + *S * (B.x - A.x);
+	// P.y = A.y + *S * (B.y - A.y);
 
-	// Vector between intersection and point C
-	A.x = ABpos*theCos-C2.x;
-	A.y = ABpos*theSin-C2.y;
-
-	newX = sqrtf((A.x*A.x+A.y*A.y)/(C.x*C.x+C.y*C.y));
-	if(((A.y<0) != (C.y<0)) || ((A.x<0) != (C.x<0)))
-		newX *= -1.0f;
-
-	*S = ABpos/distAB;
-	*T = newX;
-
-	// Success.
 	return YES;
 }
 
